--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -1,78 +1,117 @@
 {% extends "index/index.html" %}
 {% load friendshiptags %}
 {% load index %}
+
 {% block content %}
 <div style="min-height:85vh">
-    <p>Friends: {% friends request.user %}</p>
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Rank</th>
-                <th>Username</th>
-                <th>Points</th>
-            </tr>
-            {% for data in friends_lb %}
-            <tr>
-                <td>{{forloop.counter}}</td>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="jumbotron d-flex flex-wrap" style="padding-left:10vw; background-color: #DBF3FA;">
+        <div class="card" style="width:80vw; margin-top:3vh">
+            <h3 class="card-header">Friends</h3>
+            <div style="margin:2vh">
+                {% if friends %}
+                <div class="card-body">{% friends request.user %}</div>
 
+                {% else %}
+                <div>No friends yet .-.</div>
 
-    <div style="margin:5vh;">
-        <h3>Sent Friend Requests</h3>
-        <div class="d-flex flex-wrap">
-            {% for data in sent_requests %}
-            <div class="card" style="width:12vw; margin:3px">
-                <div class="card-body">
-                    <h5 class=card-title>{{data.to_user.username}}</h5>
-                    <p class="card-subtitle">Email: {{data.to_user.email}}</p>
-                    <p class="card-subtitle mb-2 text-muted">Date Sent: {{data.created}}</p>
-                </div>
+                {% endif %}
             </div>
-            {% endfor %}
+        </div>
+
+        <div class="card" style="width:80vw; margin-top:3vh">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Rank</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Points</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for data in friends_lb %}
+                    <tr>
+                        <th scope="row">{{forloop.counter}}</th>
+                        <td>{{data.0}}</td>
+                        <td>{{data.1}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-    <div>
 
-        <div style="margin:5vh;">
-            <h3>Pending Friend Requests</h3>
-            <div class="d-flex flex-wrap">
-                {% for data in pending_requests %}
-                <div class="card" style="width:12vw; margin:3px">
-                    <div class="card-body">
-                        <script>
-                            email = data.from_user.email
-                        </script>
-                        <h5 class=card-title>{{data.from_user.username}}</h5>
-                        <p class="card-subtitle">Email: {{data.from_user.email}}</p>
-                        <p class="card-subtitle mb-2 text-muted">Date Sent: {{data.created}}</p>
-                        <!--
-                        <button  type="button" name='accept_{{data.from_user.email}}'> Accept </button> <button type="button" name='reject_{{data.from_user.email}}'> Reject </button>
-                        -->
-                        <form class="card-subtitle" method="post">{% csrf_token %}
-                            <input type="submit" value="Accept" name='accept_{{data.from_user.email}}' />
-                            <input type="submit" value="Reject" name='reject_{{data.from_user.email}}' />
-                        </form>
+
+    <div class="d-flex flex-wrap" style="padding-left:10vw; padding-bottom:5vh">
+
+        <div class="card" style="width:80vw; margin-top:3vh">
+            <h3 class="card-header">Add a Friend!</h3>
+            <div class="card-body">
+                <form class="d-flex" style='padding-top:2vh' method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" class="btn btn-primary btn-sm" style="max-height:30px; margin-left:10px;"
+                        value="Add!">
+                </form>
+                <footer class="blockquote-footer">Please add friends through their first name and lowercase letters!
+                </footer>
+            </div>
+        </div>
+
+        <div class="d-flex" style="display:flex; justify-content:space-between;">
+            <div class="card" style="width:36vw; margin-top:2vh;">
+                <h3 class="card-header">Sent Friend Requests</h3>
+                <div class="d-flex flex-wrap">
+                    {% if pending_requests %}
+                    {% for data in sent_requests %}
+                    <div class="card" style="width:12vw; margin:3px;">
+                        <div class="card-body">
+                            <h5 class=card-title>{{data.to_user.username}}</h5>
+                            <p class="card-subtitle">Email: {{data.to_user.email}}</p>
+                            <p class="card-subtitle mb-2 text-muted">Date Sent: {{data.created}}</p>
+                        </div>
                     </div>
+                    {% endfor %}
+
+                    {% else %}
+                    <h7 style="margin-top:2vh; margin-left:1.5vw; margin-bottom:2vh">No sent requests</h7>
+
+                    {% endif %}
                 </div>
-                {% endfor %}
+            </div>
+
+            <div class="card" style="width:36vw; margin-top:2vh;">
+                <h3 class="card-header">Pending Friend Requests</h3>
+                <div class="d-flex flex-wrap">
+                    {% if pending_requests %}
+
+                    {% for data in pending_requests %}
+                    <div class="card" style="width:12vw; margin:3px">
+                        <div class="card-body">
+                            <script>
+                                email = data.from_user.email
+                            </script>
+                            <h5 class=card-title>{{data.from_user.username}}</h5>
+                            <p class="card-subtitle">Email: {{data.from_user.email}}</p>
+                            <p class="card-subtitle mb-2 text-muted">Date Sent: {{data.created}}</p>
+                            <form class="card-subtitle" method="post">{% csrf_token %}
+                                <input type="submit" value="Accept" name='accept_{{data.from_user.email}}' />
+                                <input type="submit" value="Reject" name='reject_{{data.from_user.email}}' />
+                            </form>
+                        </div>
+                    </div>
+                    {% endfor %}
+
+                    {% else %}
+                    <h7 style="margin-top:2vh; margin-left:1.5vw; margin-bottom:2vh">No pending requests</h7>
+
+                    {% endif %}
+                </div>
             </div>
         </div>
 
-        <div>
-            <h1 class="d-flex justify-content-center">Add a Friend!</h1>
 
-            <form class="d-flex justify-content-center" method="post">{% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Add!" />
-            </form>
-        </div>
     </div>
+
 </div>
 
 {% endblock content %}
