--- a/index/templates/index/database_list.html
+++ b/index/templates/index/database_list.html
@@ -1,18 +1,36 @@
 {% extends "index/index.html" %}
 {% block content %}
 
-<div class="container text-center" style="min-height:85vh">
-	<div class="list-group">
-		{% csrf_token %}
-		{% for user in database_list %}
-		<div class="list-group-item flex-column">
-			<h4>User: {{ user.user }}</h4>
-			<h4>Points: {{ user.points }}</h4>
-			<h4>Level: {{ user.level }}</h4>
-		</div>
-		<br>
-		{% endfor %}
+<div style="min-height:85vh" style="background-color: #DBF3FA;">
+	<div class="jumbotron d-flex flex-wrap" style="background-color: #DBF3FA;">
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">Rank</th>
+					<th scope="col">Username</th>
+					<th scope="col">Level</th>
+					<th scope="col">Points</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% csrf_token %}
+				{% for user in database_list %}
+				<tr>
+					<th scope="row">{{forloop.counter}}</th>
+					<td>{{ user.user }}</td>
+					<td>{{ user.level }}</td>
+					<td>{{ user.points }}</td>
+				</tr>
+				<br>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
+
+	<div class="alert alert-secondary" role="alert" style="width:50vw; margin-left:25vw">
+		Log more workouts to climb the leaderboard!
 	</div>
 </div>
+
 
 {% endblock content %}
