--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -9,7 +9,7 @@
         <div class="card" style="width:80vw; margin-top:3vh">
             <h3 class="card-header">Friends</h3>
             <div style="margin:2vh">
-                {% if friends %}
+                {% if data in friends %}
                 <div class="card-body">{% friends request.user %}</div>
 
                 {% else %}
@@ -52,16 +52,16 @@
                     <input type="submit" class="btn btn-primary btn-sm" style="max-height:30px; margin-left:10px;"
                         value="Add!">
                 </form>
-                <footer class="blockquote-footer">Please add friends through their first name and lowercase letters!
+                <footer class="blockquote-footer">Please add friends through their email!
                 </footer>
             </div>
         </div>
 
         <div class="d-flex" style="display:flex; justify-content:space-between;">
-            <div class="card" style="width:36vw; margin-top:2vh;">
+            <div class="card" style="width:40vw; margin-top:2vh;">
                 <h3 class="card-header">Sent Friend Requests</h3>
                 <div class="d-flex flex-wrap">
-                    {% if pending_requests %}
+                    {% if sent_requests %}
                     {% for data in sent_requests %}
                     <div class="card" style="width:12vw; margin:3px;">
                         <div class="card-body">
@@ -79,13 +79,13 @@
                 </div>
             </div>
 
-            <div class="card" style="width:36vw; margin-top:2vh;">
+            <div class="card" style="width:40vw; margin-top:2vh;">
                 <h3 class="card-header">Pending Friend Requests</h3>
                 <div class="d-flex flex-wrap">
                     {% if pending_requests %}
 
                     {% for data in pending_requests %}
-                    <div class="card" style="width:12vw; margin:3px">
+                    <div class="card" style="width:12vw; margin:10px">
                         <div class="card-body">
                             <script>
                                 email = data.from_user.email
