fixed friends list

--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -9,13 +9,13 @@
         <div class="card" style="width:80vw; margin-top:3vh">
             <h3 class="card-header">Friends</h3>
             <div style="margin:2vh">
-                {% if friends_exist %}
+                <!-- {% if friends_exist %} -->
                 <div class="card-body">{% friends request.user %}</div>
 
-                {% else %}
+                <!-- {% else %}
                 <div>No friends yet .-.</div>
 
-                {% endif %}
+                {% endif %} -->
             </div>
         </div>
 
