fixed friends list

--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -9,15 +9,9 @@
         <div class="card" style="width:80vw; margin-top:3vh">
             <h3 class="card-header">Friends</h3>
             <div style="margin:2vh">
-                <!-- {% if friends_exist %} -->
-                <div class="card-body">
+                <div>
                     <p>{% friends request.user %}</p>
                 </div>
-
-                <!-- {% else %}
-                <div>No friends yet .-.</div>
-
-                {% endif %} -->
             </div>
         </div>
 
