show sent requests if they exist

--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -61,7 +61,7 @@
             <div class="card" style="width:36vw; margin-top:2vh;">
                 <h3 class="card-header">Sent Friend Requests</h3>
                 <div class="d-flex flex-wrap">
-                    {% if pending_requests %}
+                    {% if sent_requests %}
                     {% for data in sent_requests %}
                     <div class="card" style="width:12vw; margin:3px;">
                         <div class="card-body">
