fixed user over-leveling issue, other small changes/fixes

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="jumbotron card-body" style="margin:5vh;">
-            <h3 class="card-title">Lower Log</h3>
+            <h3 class="card-title">Lower Body Log</h3>
             <div class="d-flex flex-wrap">
                 {% for data in lower_query_list %}
                 <div class="card" style="width:12vw; margin-top:10px; margin-right:10px">
