uncommented index.css

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load index %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'index/index.css' %}">
+<!--<link rel="stylesheet" type="text/css" href="{% static 'index/index.css' %}">-->
 
 {% block title %}
 
