--- a/index/templates/index/cardio_form.html
+++ b/index/templates/index/cardio_form.html
@@ -6,6 +6,11 @@
 
 {% load static %}
 
+<!--
+# Title: Boostrap
+# URL: https://getbootstrap.com/docs/4.0/components/
+# Software License: MIT License
+-->
 <div style="min-height:85vh">
 
     <style>
