--- a/index/templates/index/database_list.html
+++ b/index/templates/index/database_list.html
@@ -1,6 +1,11 @@
 {% extends "index/index.html" %}
 {% block content %}
 
+<!--
+# Title: Boostrap
+# URL: https://getbootstrap.com/docs/4.0/components/
+# Software License: MIT License
+-->
 <div style="min-height:85vh" style="background-color: #DBF3FA;">
 	<div class="jumbotron d-flex flex-wrap" style="background-color: #DBF3FA;">
 		<table class="table">
