--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -2,8 +2,11 @@
 {% load static %}
 {% load index %}
 
-<!--<link rel="stylesheet" type="text/css" href="{% static 'index/index.css' %}">-->
-
+<!--
+# Title: Boostrap
+# URL: https://getbootstrap.com/docs/4.0/components/
+# Software License: MIT License
+-->
 {% block title %}
 
 <head>
