--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -3,6 +3,12 @@
 {% load index %}
 
 {% block content %}
+
+<!--
+# Title: Boostrap
+# URL: https://getbootstrap.com/docs/4.0/components/
+# Software License: MIT License
+-->
 <div style="min-height:85vh">
 
     <div class="jumbotron d-flex flex-wrap" style="padding-left:10vw; background-color: #DBF3FA;">
